# ipp

./: .clang-format  .gitignore  .gitmodules  README.md  configure.py  format.py
ipp/: .ycm_extra_conf.py  CMakeLists.txt
ipp/capi/: CMakeLists.txt  capi.hpp  capi_context.cpp  capi_loop.cpp  capi_resource.cpp
ipp/capi/emscripten/: capi_webgl.cpp  postfix.js  prefix.js
ipp/devshell/: CMakeLists.txt
ipp/devshell/src/: camera.cpp  main.cpp
ipp/lib/: CMakeLists.txt
ipp/lib/include/ipp/: context.hpp  log.hpp  noncopyable.hpp  shared.hpp
ipp/lib/include/ipp/entity/: component.hpp  entity.hpp  entityfilter.hpp  entitygroup.hpp  world.hpp  worldentityobserver.hpp
ipp/lib/include/ipp/loop/: command.hpp  event.hpp  message.hpp  messageloop.hpp  system.hpp  systembase.hpp
ipp/lib/include/ipp/render/: armature.hpp  effect.hpp  materialbuffer.hpp  mesh.hpp  texturebitmap.hpp
ipp/lib/include/ipp/render/gl/: backbuffer.hpp  binding.hpp  buffer.hpp  error.hpp  framebuffer.hpp  handle.hpp  program.hpp  renderbuffer.hpp  rendertarget.hpp  shader.hpp  texture.hpp  texture2d.hpp  uniform.hpp  vertexdefinition.hpp
ipp/lib/include/ipp/resource/: package.hpp  packagefilesystem.hpp  packageipparchive.hpp  resource.hpp  resourcebuffer.hpp  resourcebuffermemory.hpp  resourcemanager.hpp  stringresource.hpp
ipp/lib/include/ipp/scene/: scene.hpp
ipp/lib/include/ipp/scene/animation/: action.hpp  animationsystem.hpp  channel.hpp  keyframe.hpp  sequence.hpp  track.hpp
ipp/lib/include/ipp/scene/camera/: camera.hpp  cameranodecomponent.hpp  cameranodesystem.hpp  cameraprojection.hpp  camerasystem.hpp  camerausercontrolledsystem.hpp
ipp/lib/include/ipp/scene/node/: node.hpp  nodecomponent.hpp  nodesystem.hpp  nodetransform.hpp
ipp/lib/include/ipp/scene/render/: armaturecomponent.hpp  lightcomponent.hpp  material.hpp  materialeffect.hpp  pass.hpp  renderablecomponent.hpp  rendersystem.hpp
ipp/lib/src/ipp/: context.cpp  log.cpp
ipp/lib/src/ipp/entity/: component.cpp  entity.cpp  world.cpp
ipp/lib/src/ipp/loop/: message.cpp  messageloop.cpp  system.cpp
ipp/lib/src/ipp/render/: armature.cpp  effect.cpp  mesh.cpp  texturebitmap.cpp
ipp/lib/src/ipp/render/gl/: backbuffer.cpp  error.cpp  framebuffer.cpp  program.cpp  renderbuffer.cpp  shader.cpp  texture.cpp  texture2d.cpp  vertexdefinition.cpp
ipp/lib/src/ipp/resource/: packagefilesystem.cpp  packageipparchive.cpp  resourcebuffer.cpp  resourcebuffermemory.cpp  resourcemanager.cpp  stringresource.cpp
ipp/lib/src/ipp/scene/: scene.cpp  scene_deserialization.cpp
ipp/lib/src/ipp/scene/animation/: action.cpp  animation_deserialization.cpp  animationsystem.cpp  keyframe.cpp  track.cpp
ipp/lib/src/ipp/scene/camera/: cameranodecomponent.cpp  cameranodesystem.cpp  cameraprojection.cpp  camerasystem.cpp  camerausercontrolledsystem.cpp
ipp/lib/src/ipp/scene/node/: node.cpp  nodesystem.cpp  nodetransform.cpp
ipp/lib/src/ipp/scene/render/: armaturecomponent.cpp  lightcomponent.cpp  material.cpp  materialeffect.cpp  renderablecomponent.cpp  rendersystem.cpp
ipp/lib/test/: main.cpp  test_effect.cpp  test_loop.cpp  test_mesh.cpp  test_resource.cpp  test_scene.cpp  test_world.cpp
ipp/tsapi/: .npmignore  package.json  tsconfig.json
ipp/tsapi/src/: camera.ts  context.ts  emscripten.ts  ipp.ts  messageloop.ts  module.ts  package.ts  primitive.ts  scene.ts
pipeline/ipp/: package.py
pipeline/ipp/compilers/render/: armature.py  effect.py  mesh.py  texture.py
pipeline/ipp/compilers/scene/: material.py
pipeline/ipp/compilers/scene/scene/: armature.py  camera.py  entity.py  light.py  model.py  node.py  scene.py
pipeline/ipp/compilers/scene/scene/animation/: action.py  animation.py  armature.py  camera.py  entity.py  node.py  scene.py  track.py
pipeline/ipp/tasks/: generator.py
pipeline/ipp/tasks/render/: armature.py  effect.py  mesh.py  texture.py
pipeline/ipp/tasks/scene/: material.py  scene.py
schema/ipp/schema/: primitive.fbs
schema/ipp/schema/message/: animation.fbs  camera.fbs  render.fbs
schema/ipp/schema/resource/: archive.fbs
schema/ipp/schema/resource/render/: armature.fbs  effect.fbs  mesh.fbs  texture.fbs  vertex.fbs
schema/ipp/schema/resource/scene/: animation.fbs  material.fbs  scene.fbs
